--- a/bruinmatch-frontend/src/components/SignUp.module.css
+++ b/bruinmatch-frontend/src/components/SignUp.module.css
@@ -2,8 +2,8 @@ html {
     zoom: 0.75;
      /* Old IE only */
     /*-moz-transform: scale(0.8);
-    -webkit-transform: scale(0.8);
-    transform: scale(0.8);*/
+    -webkit-transform: scale(0.8);*/
+    /*transform: scale(0.8);*/
 }
 .SignUp {
     background-color: #EFEFEF;
@@ -14,10 +14,10 @@ html {
 }
 .FullFrame {
     background-color: #EFEFEF;
-    min-height: 100vh;
+    /*min-height: 100vh;*/
    
     top: 0px;
-    height: 3300px;
+    height: 3600px;
 }
 
     /* my pf */
@@ -264,7 +264,7 @@ color: rgba(39, 116, 174, 0.53);*/
 .Frame2
 {
     position: absolute;
-    width: 1303px;
+    /*width: 1303px;*/
     height: 1019px;
     left: 310px;
     top: 1203px;
@@ -272,7 +272,108 @@ color: rgba(39, 116, 174, 0.53);*/
     
 }
   
+.Instagram
+{
+    position: absolute;
+    width: 284px;
+    height: 84px;
+    left: 23px;
+    top: 1030px;
+    
+    font-family: 'Prompt';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 35px;
+    line-height: 53px;
+    text-align: center;
+    letter-spacing: 0.05em;
+    
+    color: #525252;
+}
 
+.InstagramInput
+{
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 949px;
+    height: 63px;
+    left: 299px;
+    top: 1030px;
+    
+    background: rgba(255, 255, 255, 0.75);
+    border: 2px solid #989898;
+    border-radius: 20px;
+}
+
+
+.Discord
+{
+    position: absolute;
+    width: 284px;
+    height: 84px;
+    left: 23px;
+    top: 1144px;
+    
+    font-family: 'Prompt';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 35px;
+    line-height: 53px;
+    text-align: center;
+    letter-spacing: 0.05em;
+    
+    color: #525252;
+}
+
+.DiscordInput
+{
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 949px;
+    height: 63px;
+    left: 299px;
+    top: 1144px;
+    
+    background: rgba(255, 255, 255, 0.75);
+    border: 2px solid #989898;
+    border-radius: 20px;
+}
+
+.Facebook
+{
+    position: absolute;
+    width: 284px;
+    height: 84px;
+    left: 23px;
+    top: 1258px;
+    
+    font-family: 'Prompt';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 35px;
+    line-height: 53px;
+    text-align: center;
+    letter-spacing: 0.05em;
+    
+    color: #525252;
+}
+
+.FacebookInput
+{
+    box-sizing: border-box;
+
+    position: absolute;
+    width: 949px;
+    height: 63px;
+    left: 299px;
+    top: 1258px;
+    
+    background: rgba(255, 255, 255, 0.75);
+    border: 2px solid #989898;
+    border-radius: 20px;
+}
 
 
 /* Name* */
@@ -925,7 +1026,7 @@ position: absolute;
 width: 1330px;
 height: 817px;
 left: 295px;
-top: 2238px;
+top: 2600px;
 }
 
 
@@ -1021,16 +1122,16 @@ color: rgba(82, 82, 82, 0.62);
 
 .Option1
 {position: absolute;
-    width: 156px;
+    width: 356px;
     height: 46px;
-    left: 104px;
+    left: 20px;
     
     top: 140px;
     
     font-family: 'Prompt';
     font-style: normal;
     font-weight: 500;
-    font-size: 35px;
+    font-size: 25px;
     line-height: 53px;
     text-align: center;
     letter-spacing: 0.05em;
@@ -1044,15 +1145,15 @@ color: rgba(82, 82, 82, 0.62);
 
 .Option2
 {position: absolute;
-    width: 156px;
+    width: 356px;
     height: 46px;
-    left: 104px;
+    left: 20px;
     top: 224px;
     
     font-family: 'Prompt';
     font-style: normal;
     font-weight: 500;
-    font-size: 35px;
+    font-size: 25px;
     line-height: 53px;
     text-align: center;
     letter-spacing: 0.05em;
@@ -1068,15 +1169,15 @@ color: rgba(82, 82, 82, 0.62);
 {
 
     position: absolute;
-    width: 156px;
+    width: 356px;
     height: 46px;
-    left: 104px;
+    left: 20px;
     top: 314px;
     
     font-family: 'Prompt';
     font-style: normal;
     font-weight: 500;
-    font-size: 35px;
+    font-size: 25px;
     line-height: 53px;
     text-align: center;
     letter-spacing: 0.05em;
@@ -1091,15 +1192,15 @@ color: rgba(82, 82, 82, 0.62);
 {
 
     position: absolute;
-    width: 156px;
+    width: 356px;
     height: 46px;
-    left: 104px;
+    left: 20px;
     top: 403px;
     
     font-family: 'Prompt';
     font-style: normal;
     font-weight: 500;
-    font-size: 35px;
+    font-size: 25px;
     line-height: 53px;
     text-align: center;
     letter-spacing: 0.05em;
@@ -1114,15 +1215,15 @@ color: rgba(82, 82, 82, 0.62);
 {
 
 position: absolute;
-width: 156px;
+width: 356px;
 height: 46px;
-left: 104px;
+left: 20px;
 top: 493px;
 
 font-family: 'Prompt';
 font-style: normal;
 font-weight: 500;
-font-size: 35px;
+font-size: 25px;
 line-height: 53px;
 text-align: center;
 letter-spacing: 0.05em;
@@ -1250,6 +1351,40 @@ color: #525252;
     letter-spacing: 0.05em;
     
     color: #2774AE;
+}
+
+.Switchtextno
+{
+    position: aboslute;
+    font-family: 'Prompt';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 68px;
+    text-align: center;
+    letter-spacing: 0.05em;
+
+    color: #989898;
+
+}
+.Switchtext
+{
+    
+    width: 150px;
+    left: -20px;
+    text-align: center;
+
+    font-family: 'Prompt';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 68px;
+    
+    
+    letter-spacing: 0.05em;
+
+    color: #989898;
+
 }
 
 
@@ -1947,7 +2082,7 @@ color: rgba(82, 82, 82, 0.62);
 
 .Frame4
 {position: absolute;
-width: 1303px;
+/*width: 1303px;*/
 height: 1321px;
 left: 310px;
 top: 852px;
@@ -2173,6 +2308,8 @@ left: 1597px;
 top: 2810px;
 }
 
+/* Frame 5*/
+
 
 
 /* Rectangle 4 */
@@ -2184,12 +2321,13 @@ position: absolute;
 width: 293px;
 height: 90px;
 left: 1197px;
-top: 1910px;
+top: 2200px;
 
 background: rgba(255, 255, 255, 0.75);
 border: 4px solid #7B7B7B;
 border-radius: 40px;
 }
+
 
 
 /* Create */
