--- a/bruinmatch-frontend/src/components/login.module.css
+++ b/bruinmatch-frontend/src/components/login.module.css
@@ -6,6 +6,7 @@
     /* margin: 0; */
     width: 100%;
     margin: auto;
+    zoom: 1.45;
     
   }
 
@@ -112,8 +113,8 @@ top: 728px;
 padding-left: 80px;
 padding-top: 15px;
 padding-bottom: 15px;
-/* width: 100%; */
-width: 1355px;
+width: 100%;
+/* width: 1355px; */
 
 font-family: 'Ubuntu';
 font-style: normal;
