Fixed Input Font Color for Sign-Up Page

--- a/bruinmatch-frontend/src/components/SignUp.module.css
+++ b/bruinmatch-frontend/src/components/SignUp.module.css
@@ -306,6 +306,9 @@ color: rgba(39, 116, 174, 0.53);*/
     height: 63px;
     left: 299px;
     top: 1030px;
+
+    color: black;
+    font-size: 30px;
     
     background: rgba(255, 255, 255, 0.75);
     border: 2px solid #989898;
@@ -341,6 +344,8 @@ color: rgba(39, 116, 174, 0.53);*/
     height: 63px;
     left: 299px;
     top: 1144px;
+    color: black;
+    font-size: 30px;
     
     background: rgba(255, 255, 255, 0.75);
     border: 2px solid #989898;
@@ -375,6 +380,8 @@ color: rgba(39, 116, 174, 0.53);*/
     height: 63px;
     left: 299px;
     top: 1258px;
+    color: black;
+    font-size: 30px;
     
     background: rgba(255, 255, 255, 0.75);
     border: 2px solid #989898;
@@ -544,7 +551,8 @@ color: rgba(39, 116, 174, 0.53);*/
     height: 63px;
     left: 299px;
     top: 155px;
-    
+    color: black;
+    font-size: 30px;
     background: rgba(255, 255, 255, 0.75);
     border: 2px solid #989898;
     border-radius: 20px;
@@ -564,6 +572,8 @@ color: rgba(39, 116, 174, 0.53);*/
     left: 299px;
     top: 356px;
     
+    color: black;
+    font-size: 30px;
     background: rgba(255, 255, 255, 0.75);
     border: 2px solid #989898;
     border-radius: 20px;
@@ -579,7 +589,8 @@ color: rgba(39, 116, 174, 0.53);*/
     height: 63px;
     left: 299px;
     top: 577px;
-    
+    color: black;
+    font-size: 30px;
     background: rgba(255, 255, 255, 0.75);
     border: 2px solid #989898;
     border-radius: 20px;
@@ -596,7 +607,8 @@ color: rgba(39, 116, 174, 0.53);*/
     height: 63px;
     left: 299px;
     top: 684px;
-    
+    color: black;
+    font-size: 30px;
     background: rgba(255, 255, 255, 0.75);
     border: 2px solid #989898;
     border-radius: 20px;
@@ -614,7 +626,8 @@ color: rgba(39, 116, 174, 0.53);*/
     height: 203px;
     left: 299px;
     top: 791px;
-    
+    color: black;
+    font-size: 30px;
     background: rgba(255, 255, 255, 0.75);
     border: 2px solid #989898;
     border-radius: 20px;
@@ -2189,6 +2202,8 @@ height: 63px;
 left: 299px;
 top: 155px;
 
+color: black;
+    font-size: 30px;
 background: rgba(255, 255, 255, 0.75);
 border: 2px solid #989898;
 border-radius: 20px;
@@ -2206,6 +2221,8 @@ height: 63px;
 left: 298px;
 top: 235px;
 
+color: black;
+    font-size: 30px;
 background: rgba(255, 255, 255, 0.75);
 border: 2px solid #989898;
 border-radius: 20px;
