--- a/bruinmatch-frontend/src/components/login.module.css
+++ b/bruinmatch-frontend/src/components/login.module.css
@@ -192,7 +192,9 @@ font-weight: 20;
 font-size: 16px;
 line-height: 20px;
 letter-spacing: 0.05em;
-padding-bottom: 2px;    
+padding-bottom: 2px; 
+
+
 
 }
 
@@ -215,7 +217,7 @@ z-index: 1;
 
 
 .button {
-    border: none;
+    /* border: none;
     background-color: #e7e7e7; 
     color: black;
     padding: 15px 32px;
@@ -224,7 +226,45 @@ z-index: 1;
     display: inline-block;
     font-size: 16px;
     border-radius: 12px;
-    border: 2px solid #2774AE;
+    border: 2px solid #2774AE; */
+
+
+
+/* Rectangle 4 */
+
+box-sizing: border-box;
+
+position: absolute;
+width: 265px;
+height: 61px;
+left: 1364px;
+top: 1595px; 
+
+background: rgba(255, 255, 255, 0.75);
+border: 4px solid #2774AE;
+border-radius: 40px;
+
+
+/* Login */
+
+position: absolute;
+width: 150px;
+height: 42px;
+left: 1000px;
+top: 120px;
+
+font-family: 'Prompt';
+font-style: normal;
+font-weight: 500;
+font-size: 20px;
+line-height: 38px;
+text-align: center;
+letter-spacing: 0.05em;
+
+color: #2774AE;
+
+
+    
   }
   .button:hover {
     background-color: #79a1c0;
@@ -267,4 +307,26 @@ z-index: 1;
     height: 25px;
     right: 100px;
     position: relative;
+}
+
+
+.createAccount {
+  /* Create Account */
+
+position: absolute;
+height: 39px;
+left: 1045px;
+top: 92px;
+
+
+font-family: 'Ubuntu';
+font-style: normal;
+font-weight: 500;
+font-size: 10px;
+line-height: 29px;
+text-align: center;
+letter-spacing: 0.05em;
+
+color: #FFD100;
+
 }
