--- a/bruinmatch-frontend/src/Rec.css
+++ b/bruinmatch-frontend/src/Rec.css
@@ -1,16 +1,43 @@
-.frame1 {
-  display: flex;
-  position: absolute;
+.profile-container {
   width: 620px;
   height: 400px;
-  border-radius: 10%;
-  left: 400px;
-  top: 120px;
-  border: 3px solid #2774ae;
-  background: #e7e7e7;
+  border: 1px solid rgba(0,0,.125);
+  margin: 0 auto;
+  border-radius: 5px;
+  overflow: hidden;
+  padding: 100px;
 }
 
-.ProfilePhoto1 {
+.list {
+  display: grid;
+  margin: 20px 0 50px 0;
+  grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: 1fr;
+  grid-gap: 2em;
+  padding-left: 300px;
+}
+
+.desc {
+  height: 130px;
+  padding: 10px;
+}
+
+.desc h2 {
+  font-size: 1em;
+  font-weight: 400;
+}
+
+.desc h3, p {
+  font-weight: 300;
+}
+
+.desc h3 {
+  color: #6c757d;
+  font-size: 1em;
+  padding: 10px 0 10px 0;
+}
+
+/* .ProfilePhoto1 {
   position: absolute;
   width: 160px;
   height: 160px;
@@ -18,10 +45,10 @@
   left: 430px;
   top: 140px;
   background: url(https://samueli.ucla.edu/wp-content/uploads/samueli/Paul-Eggert_time_zone.png);
-}
+} */
 
-.Name1 {
-  position: absolute;
+ .Name1 {
+  /* position: absolute;
   width: 284px;
   height: 84px;
   left: 645px;
@@ -35,7 +62,10 @@
   text-align: center;
   letter-spacing: 0.05em;
 
-  color: #525252;
+  color: #525252; */
+  color: #6c757d;
+  font-size: 1em;
+  padding: 10px 0 10px 0;
 }
 
 .Gender1 {
@@ -234,40 +264,4 @@
   letter-spacing: 0.05em;
 
   color: #525252;
-}
-
-.rectangle2 {
-  display: flex;
-  position: absolute;
-  width: 620px;
-  height: 400px;
-  border-radius: 10%;
-  left: 1100px;
-  top: 120px;
-  border: 3px solid #2774ae;
-  background: #e7e7e7;
-}
-
-.rectangle3 {
-  display: flex;
-  position: absolute;
-  width: 620px;
-  height: 400px;
-  border-radius: 10%;
-  left: 400px;
-  top: 580px;
-  border: 3px solid #2774ae;
-  background: #e7e7e7;
-}
-
-.rectangle4 {
-  display: flex;
-  position: absolute;
-  width: 620px;
-  height: 400px;
-  border-radius: 10%;
-  left: 1100px;
-  top: 580px;
-  border: 3px solid #2774ae;
-  background: #e7e7e7;
 }
