--- a/bruinmatch-frontend/src/components/SignUp.module.css
+++ b/bruinmatch-frontend/src/components/SignUp.module.css
@@ -663,7 +663,7 @@ transition-duration: 0.1s;
 
 }
 .Grad:hover {
-    background-color: rgba(39, 116, 174, 0.53); /* blue */
+    /*background-color: rgba(39, 116, 174, 0.53); /* blue */
     border: 2px solid #2774AE;
     color: white;
   }
@@ -705,9 +705,9 @@ transition-duration: 0.1s;
 }
 
 .first:hover {
-    background-color: rgba(39, 116, 174, 0.53); /* blue */
-    border: 2px solid #2774AE;
-    color: white;
+    /*background-color: rgba(39, 116, 174, 0.53); /* blue */
+    border: 3px solid #2774AE;
+  
   }
   /*.first:focus
   {
@@ -747,9 +747,9 @@ transition-duration: 0.1s;
 }
 
 .second:hover {
-    background-color: rgba(39, 116, 174, 0.53); /* blue */
-    border: 2px solid #2774AE;
-    color: white;
+   /* background-color: rgba(39, 116, 174, 0.53); /* blue */
+    border: 3px solid #2774AE;
+   
   }
   .second:focus
   {
@@ -786,9 +786,9 @@ transition-duration: 0.1s;
 }
 
 .third:hover {
-    background-color: rgba(39, 116, 174, 0.53); /* blue */
-    border: 2px solid #2774AE;
-    color: white;
+    /*background-color: rgba(39, 116, 174, 0.53); /* blue */
+    border: 3px solid #2774AE;
+    
   }
   .third:focus
   {
@@ -827,9 +827,9 @@ transition-duration: 0.1s;
 }
 
 .fourth:hover {
-    background-color: rgba(39, 116, 174, 0.53); /* blue */
-    border: 2px solid #2774AE;
-    color: white;
+    /*background-color: rgba(39, 116, 174, 0.53); /* blue */
+    border: 3px solid #2774AE;
+ 
   }
   .fourth:focus
   {
@@ -865,14 +865,14 @@ transition-duration: 0.1s;
 
 }
 .male:hover {
-    background-color: rgba(39, 116, 174, 0.53); /* blue */
-    border: 2px solid #2774AE;
-    color: white;
+   /* background-color: rgba(39, 116, 174, 0.53); /* blue */
+    border: 3px solid #2774AE;
+
   }
 
   .male:focus
   {
-    background-color: rgb(39, 115, 174); /* blue */
+    background-color: #2773ae; /* bluen */
     color: white;
   }
 
@@ -906,9 +906,9 @@ transition-duration: 0.1s;
 
 }
 .undef:hover {
-    background-color: rgba(39, 116, 174, 0.53); /* blue */
-    border: 2px solid #2774AE;
-    color: white;
+    /*background-color: rgba(39, 116, 174, 0.53); /* blue */
+    border: 3px solid #2774AE;
+  
   }
 
   .undef:focus
@@ -945,9 +945,9 @@ border-radius: 20px;
   }
   
   .female:hover {
-    background-color: rgba(39, 116, 174, 0.53); /* blue */
-    border: 2px solid #2774AE;
-    color: white;
+   /* background-color: rgba(39, 116, 174, 0.53); /* blue */
+    border: 3px solid #2774AE;
+   
   }
 
   .female:focus
@@ -2463,10 +2463,27 @@ height: 90px;
 left: 1197px;
 top: 2200px;
 
+color:rgba(82, 82, 82, 0.62);
+font-family: 'Prompt';
+font-style: normal;
+font-weight: 500;
+font-size: 25px;
+line-height: 53px;
+text-align: center;
+letter-spacing: 0.05em;
+
+
 background: rgba(255, 255, 255, 0.75);
 border: 4px solid #7B7B7B;
 border-radius: 40px;
 }
+
+.SubmitButton:hover {
+     background-color: rgba(39, 116, 174, 0.53); /* blue */
+     color: white;
+     border: 3px solid #2774AE;
+    
+   }
 
 
 
