--- a/bruinmatch-frontend/src/Rec.css
+++ b/bruinmatch-frontend/src/Rec.css
@@ -69,7 +69,7 @@
 }
 
 .Gender1 {
-  position: absolute;
+  /* position: absolute;
   width: 284px;
   height: 84px;
   left: 520px;
@@ -83,7 +83,10 @@
   text-align: center;
   letter-spacing: 0.05em;
 
-  color: #525252;
+  color: #525252; */
+  color: #6c757d;
+  font-size: 1em;
+  padding: 10px 0 10px 0;
 }
 
 .Major1 {
