--- a/bruinmatch-frontend/src/Rec.css
+++ b/bruinmatch-frontend/src/Rec.css
@@ -1,11 +1,12 @@
-.profile-container {
-  width: 620px;
+.container {
+  width: 700px;
   height: 400px;
-  border: 1px solid rgba(0,0,.125);
+  border: 3px solid #2774ae;
   margin: 0 auto;
-  border-radius: 5px;
+  border-radius: 50px;
   overflow: hidden;
-  padding: 100px;
+  padding-left: 40px;
+  padding-top: 33px;
 }
 
 .list {
@@ -13,8 +14,64 @@
   margin: 20px 0 50px 0;
   grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: 1fr;
-  grid-gap: 2em;
   padding-left: 300px;
+  padding-top: 100px;
+
+  font-size: 18px;
+  font-weight: 500;
+  font-family: "Prompt";
+  color: #525252;
+}
+
+.name1 {
+  font-size: 28px;
+  padding-left: 350px;
+}
+
+.gender1 {
+  padding-top: 5px;
+  padding-left: 300px;
+}
+
+.major1 {
+  padding-left: 300px;
+}
+
+.year1{
+  padding-left: 300px;
+}
+
+.phone1{
+  padding-left: 300px;
+}
+
+.email1{
+  padding-left: 300px;
+}
+
+.bio1 {
+  padding-top: 10px;
+  padding-left: 290px;
+}
+
+.save1 {
+  margin-left: 130px;
+  margin-top: 75px;
+  border: 3px solid #2774ae;
+  border-radius: 40px;
+  background-color: #c1e4ff;
+  padding: 5px 20px;
+  font-size: 20px;
+}
+
+.view1 {
+  margin-left: 200px;
+  margin-top: 75px;
+  border: 3px solid #2774ae;
+  border-radius: 40px;
+  background-color: #c1e4ff;
+  padding: 5px 20px;
+  font-size: 20px;
 }
 
 .desc {
@@ -47,8 +104,8 @@
   background: url(https://samueli.ucla.edu/wp-content/uploads/samueli/Paul-Eggert_time_zone.png);
 } */
 
- .Name1 {
-  /* position: absolute;
+/* .Name1 {
+  position: absolute;
   width: 284px;
   height: 84px;
   left: 645px;
@@ -62,14 +119,14 @@
   text-align: center;
   letter-spacing: 0.05em;
 
-  color: #525252; */
+  color: #525252;
   color: #6c757d;
   font-size: 1em;
   padding: 10px 0 10px 0;
 }
 
 .Gender1 {
-  /* position: absolute;
+  position: absolute;
   width: 284px;
   height: 84px;
   left: 520px;
@@ -83,7 +140,7 @@
   text-align: center;
   letter-spacing: 0.05em;
 
-  color: #525252; */
+  color: #525252;
   color: #6c757d;
   font-size: 1em;
   padding: 10px 0 10px 0;
@@ -267,4 +324,4 @@
   letter-spacing: 0.05em;
 
   color: #525252;
-}
+}*/
