--- a/bruinmatch-frontend/src/Rec.css
+++ b/bruinmatch-frontend/src/Rec.css
@@ -43,6 +43,63 @@
 
 .phone1{
   padding-left: 300px;
+  padding-top: 100px;
+
+  font-size: 18px;
+  font-weight: 500;
+  font-family: "Prompt";
+  color: #525252;
+}
+
+.name1 {
+  font-size: 28px;
+  padding-left: 350px;
+}
+
+.gender1 {
+  padding-top: 5px;
+  padding-left: 300px;
+}
+
+.major1 {
+  padding-left: 300px;
+}
+
+.year1{
+  padding-left: 300px;
+}
+
+.phone1{
+  padding-left: 300px;
+}
+
+.email1{
+  padding-left: 300px;
+}
+
+.bio1 {
+  padding-top: 10px;
+  padding-left: 290px;
+}
+
+.save1 {
+  margin-left: 130px;
+  margin-top: 75px;
+  border: 3px solid #2774ae;
+  border-radius: 40px;
+  background-color: #c1e4ff;
+  padding: 5px 20px;
+  font-size: 20px;
+}
+
+.view1 {
+  margin-left: 200px;
+  margin-top: 75px;
+  border: 3px solid #2774ae;
+  border-radius: 40px;
+  background-color: #c1e4ff;
+  padding: 5px 20px;
+  font-size: 20px;
 }
 
 .email1{
@@ -110,7 +167,6 @@
   height: 84px;
   left: 645px;
   top: 130px;
-
   font-family: "Prompt";
   font-style: normal;
   font-weight: 500;
@@ -118,20 +174,17 @@
   line-height: 53px;
   text-align: center;
   letter-spacing: 0.05em;
-
   color: #525252;
   color: #6c757d;
   font-size: 1em;
   padding: 10px 0 10px 0;
 }
-
 .Gender1 {
   position: absolute;
   width: 284px;
   height: 84px;
   left: 520px;
   top: 170px;
-
   font-family: "Prompt";
   font-style: normal;
   font-weight: 500;
@@ -139,20 +192,17 @@
   line-height: 53px;
   text-align: center;
   letter-spacing: 0.05em;
-
   color: #525252;
   color: #6c757d;
   font-size: 1em;
   padding: 10px 0 10px 0;
 }
-
 .Major1 {
   position: absolute;
   width: 284px;
   height: 84px;
   left: 520px;
   top: 200px;
-
   font-family: "Prompt";
   font-style: normal;
   font-weight: 500;
@@ -160,17 +210,14 @@
   line-height: 53px;
   text-align: center;
   letter-spacing: 0.05em;
-
   color: #525252;
 }
-
 .Year1 {
   position: absolute;
   width: 284px;
   height: 84px;
   left: 520px;
   top: 230px;
-
   font-family: "Prompt";
   font-style: normal;
   font-weight: 500;
@@ -178,17 +225,14 @@
   line-height: 53px;
   text-align: center;
   letter-spacing: 0.05em;
-
   color: #525252;
 }
-
 .Phone1 {
   position: absolute;
   width: 284px;
   height: 84px;
   left: 520px;
   top: 260px;
-
   font-family: "Prompt";
   font-style: normal;
   font-weight: 500;
@@ -196,17 +240,14 @@
   line-height: 53px;
   text-align: center;
   letter-spacing: 0.05em;
-
   color: #525252;
 }
-
 .Email1 {
   position: absolute;
   width: 284px;
   height: 84px;
   left: 520px;
   top: 290px;
-
   font-family: "Prompt";
   font-style: normal;
   font-weight: 500;
@@ -214,17 +255,14 @@
   line-height: 53px;
   text-align: center;
   letter-spacing: 0.05em;
-
   color: #525252;
 }
-
 .Comments1 {
   position: absolute;
   width: 284px;
   height: 84px;
   left: 600px;
   top: 320px;
-
   font-family: "Prompt";
   font-style: normal;
   font-weight: 500;
@@ -232,17 +270,14 @@
   line-height: 53px;
   text-align: center;
   letter-spacing: 0.05em;
-
   color: #525252;
 }
-
 .Pref1 {
   position: absolute;
   width: 284px;
   height: 84px;
   left: 320px;
   top: 330px;
-
   font-family: "Prompt";
   font-style: normal;
   font-weight: 500;
@@ -250,17 +285,14 @@
   line-height: 53px;
   text-align: center;
   letter-spacing: 0.05em;
-
   color: #525252;
 }
-
 .Pref2 {
   position: absolute;
   width: 284px;
   height: 84px;
   left: 320px;
   top: 360px;
-
   font-family: "Prompt";
   font-style: normal;
   font-weight: 500;
@@ -268,17 +300,14 @@
   line-height: 53px;
   text-align: center;
   letter-spacing: 0.05em;
-
   color: #525252;
 }
-
 .Pref3 {
   position: absolute;
   width: 284px;
   height: 84px;
   left: 320px;
   top: 390px;
-
   font-family: "Prompt";
   font-style: normal;
   font-weight: 500;
@@ -286,17 +315,14 @@
   line-height: 53px;
   text-align: center;
   letter-spacing: 0.05em;
-
   color: #525252;
 }
-
 .Pref4 {
   position: absolute;
   width: 284px;
   height: 84px;
   left: 320px;
   top: 420px;
-
   font-family: "Prompt";
   font-style: normal;
   font-weight: 500;
@@ -304,17 +330,14 @@
   line-height: 53px;
   text-align: center;
   letter-spacing: 0.05em;
-
   color: #525252;
 }
-
 .Pref5 {
   position: absolute;
   width: 284px;
   height: 84px;
   left: 320px;
   top: 450px;
-
   font-family: "Prompt";
   font-style: normal;
   font-weight: 500;
@@ -322,6 +345,5 @@
   line-height: 53px;
   text-align: center;
   letter-spacing: 0.05em;
-
   color: #525252;
 }*/
