Fixed filtering, added SaveProfile feature

--- a/bruinmatch-frontend/src/Rec.css
+++ b/bruinmatch-frontend/src/Rec.css
@@ -1,4 +1,4 @@
-.container {
+.card-container {
   width: 700px;
   height: 400px;
   border: 3px solid #2774ae;
@@ -150,200 +150,3 @@
   font-size: 1em;
   padding: 10px 0 10px 0;
 }
-
-/* .ProfilePhoto1 {
-  position: absolute;
-  width: 160px;
-  height: 160px;
-  border-radius: 50%;
-  left: 430px;
-  top: 140px;
-  background: url(https://samueli.ucla.edu/wp-content/uploads/samueli/Paul-Eggert_time_zone.png);
-} */
-
-/* .Name1 {
-  position: absolute;
-  width: 284px;
-  height: 84px;
-  left: 645px;
-  top: 130px;
-  font-family: "Prompt";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 30px;
-  line-height: 53px;
-  text-align: center;
-  letter-spacing: 0.05em;
-  color: #525252;
-  color: #6c757d;
-  font-size: 1em;
-  padding: 10px 0 10px 0;
-}
-.Gender1 {
-  position: absolute;
-  width: 284px;
-  height: 84px;
-  left: 520px;
-  top: 170px;
-  font-family: "Prompt";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 53px;
-  text-align: center;
-  letter-spacing: 0.05em;
-  color: #525252;
-  color: #6c757d;
-  font-size: 1em;
-  padding: 10px 0 10px 0;
-}
-.Major1 {
-  position: absolute;
-  width: 284px;
-  height: 84px;
-  left: 520px;
-  top: 200px;
-  font-family: "Prompt";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 53px;
-  text-align: center;
-  letter-spacing: 0.05em;
-  color: #525252;
-}
-.Year1 {
-  position: absolute;
-  width: 284px;
-  height: 84px;
-  left: 520px;
-  top: 230px;
-  font-family: "Prompt";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 53px;
-  text-align: center;
-  letter-spacing: 0.05em;
-  color: #525252;
-}
-.Phone1 {
-  position: absolute;
-  width: 284px;
-  height: 84px;
-  left: 520px;
-  top: 260px;
-  font-family: "Prompt";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 53px;
-  text-align: center;
-  letter-spacing: 0.05em;
-  color: #525252;
-}
-.Email1 {
-  position: absolute;
-  width: 284px;
-  height: 84px;
-  left: 520px;
-  top: 290px;
-  font-family: "Prompt";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 53px;
-  text-align: center;
-  letter-spacing: 0.05em;
-  color: #525252;
-}
-.Comments1 {
-  position: absolute;
-  width: 284px;
-  height: 84px;
-  left: 600px;
-  top: 320px;
-  font-family: "Prompt";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 53px;
-  text-align: center;
-  letter-spacing: 0.05em;
-  color: #525252;
-}
-.Pref1 {
-  position: absolute;
-  width: 284px;
-  height: 84px;
-  left: 320px;
-  top: 330px;
-  font-family: "Prompt";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 53px;
-  text-align: center;
-  letter-spacing: 0.05em;
-  color: #525252;
-}
-.Pref2 {
-  position: absolute;
-  width: 284px;
-  height: 84px;
-  left: 320px;
-  top: 360px;
-  font-family: "Prompt";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 53px;
-  text-align: center;
-  letter-spacing: 0.05em;
-  color: #525252;
-}
-.Pref3 {
-  position: absolute;
-  width: 284px;
-  height: 84px;
-  left: 320px;
-  top: 390px;
-  font-family: "Prompt";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 53px;
-  text-align: center;
-  letter-spacing: 0.05em;
-  color: #525252;
-}
-.Pref4 {
-  position: absolute;
-  width: 284px;
-  height: 84px;
-  left: 320px;
-  top: 420px;
-  font-family: "Prompt";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 53px;
-  text-align: center;
-  letter-spacing: 0.05em;
-  color: #525252;
-}
-.Pref5 {
-  position: absolute;
-  width: 284px;
-  height: 84px;
-  left: 320px;
-  top: 450px;
-  font-family: "Prompt";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 53px;
-  text-align: center;
-  letter-spacing: 0.05em;
-  color: #525252;
-}*/
