--- a/bruinmatch-frontend/src/Rec.css
+++ b/bruinmatch-frontend/src/Rec.css
@@ -11,11 +11,12 @@
 
 .list {
   display: grid;
-  margin: 20px 0 50px 0;
+  margin: 10px 0 50px 0;
   grid-template-columns: repeat(2, 1fr);
-  grid-auto-rows: 1fr;
-  padding-left: 300px;
+  grid-auto-rows: 3fr;
+  padding-left: 100px;
   padding-top: 100px;
+  align-items: space-evenly;
 
   font-size: 18px;
   font-weight: 500;
