--- a/bruinmatch-frontend/src/Rec.css
+++ b/bruinmatch-frontend/src/Rec.css
@@ -73,28 +73,6 @@
   padding-left: 300px;
 }
 
-.name1 {
-  font-size: 28px;
-  padding-left: 350px;
-}
-
-.gender1 {
-  padding-top: 5px;
-  padding-left: 300px;
-}
-
-.major1 {
-  padding-left: 300px;
-}
-
-.year1 {
-  padding-left: 300px;
-}
-
-.phone1 {
-  padding-left: 300px;
-}
-
 .email1 {
   padding-left: 300px;
 }
@@ -140,33 +118,14 @@
   background: #c1e4ff;
 }
 
-.email1 {
-  padding-left: 300px;
-}
-
-.bio1 {
-  padding-top: 10px;
-  padding-left: 290px;
-}
-
-.save1 {
-  margin-left: 130px;
-  margin-top: 75px;
-  border: 3px solid #2774ae;
-  border-radius: 40px;
-  background-color: #c1e4ff;
-  padding: 5px 20px;
-  font-size: 20px;
-}
-
-.view1 {
-  margin-left: 200px;
-  margin-top: 75px;
-  border: 3px solid #2774ae;
-  border-radius: 40px;
-  background-color: #c1e4ff;
-  padding: 5px 20px;
-  font-size: 20px;
+.ProfilePhoto1{
+  border-radius: 50%;
+  display: inline-block; 
+  margin-bottom: -200;
+  position: relative; 
+  width: 200px; 
+  height: 200px;
+  overflow: hidden; 
 }
 
 .desc {
@@ -188,16 +147,4 @@ p {
   color: #6c757d;
   font-size: 1em;
   padding: 10px 0 10px 0;
-}
-
-
-.ProfilePhoto1{
-
-  border-radius: 50%;
-  display: inline-block; 
-  position: absolute; 
-  width: 200px; 
-  height: 200px;
-  overflow: hidden; 
-  
 }
