--- a/bruinmatch-frontend/src/components/login.module.css
+++ b/bruinmatch-frontend/src/components/login.module.css
@@ -2,7 +2,7 @@
     background-color: #2774AE;
     min-height: 100vh;
     color: white;
-    max-width: 1435px;
+    /* max-width: 1435px; */
     /* margin: 0; */
     width: 100%;
     margin: auto;
@@ -67,7 +67,7 @@ color: #2774AE;
   height: 500px;
   left: 0px;
   top: 176px;
-  max-width: 1445px;
+  /* max-width: 1445px; */
 }
 
 img{ 
